--- a/UnionSquare.iOS/elastos wallet/elastos wallet-Info.plist
+++ b/UnionSquare.iOS/elastos wallet/elastos wallet-Info.plist
@@ -2,6 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBund leDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>public.data</string>
+			<key>CFBundletypeextensions</key>
+			<array>
+				<string>data</string>
+			</array>
+			<key>Handler rank</key>
+			<string>Default</string>
+			<key>Role</key>
+			<string>Viewer</string>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
@@ -63,6 +78,8 @@
 	<key>CFBundleVersion</key>
 	<string>1.0.0.5</string>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>LSSupports Opening DocumentsIn Place</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
