--- a/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
+++ b/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
@@ -5,7 +5,7 @@ Chains:
         Index: 0
 
         /* Can be any of the following values: MainNet, TestNet, RegTest */
-        NetType: "MainNet"
+        NetType: "RegTest"
         MinFee: 10000
         FeePerKB: 10000
         DisconnectionTime: 300
@@ -215,7 +215,7 @@ Chains:
         Index: 1
 
         /* Can be any of the following values: MainNet, TestNet, RegTest */
-        NetType: "MainNet"
+        NetType: "RegTest"
 
         MinFee: 10000
         FeePerKB: 10000
