--- a/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
+++ b/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
@@ -4,7 +4,7 @@ Chains:
         ID: "ELA"
         Index: 0
         /* Can be any of the following values: MainNet, TestNet, RegTest,PrvNet */
-        NetType: "PrvNet"
+        NetType: "MainNet"
         MinFee: 10000
         FeePerKB: 10000
         DisconnectionTime: 300
@@ -234,7 +234,7 @@ Chains:
         Index: 1
 
         /* Can be any of the following values: MainNet, TestNet, RegTest */
-        NetType: "RegTest"
+        NetType: "MainNet"
 
         MinFee: 10000
         FeePerKB: 10000
