42a59d3118bc37d319f3c6b0396ec70737539f5e [formerly e14f86d40c92cc536872b6cee9e78f07e70e185a]
Former-commit-id: 6d64fbf08dc1f623eebf86c1640744c5b3b34179

--- a/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
+++ b/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
@@ -234,7 +234,7 @@ Chains:
         Index: 1
 
         /* Can be any of the following values: MainNet, TestNet, RegTest */
-        NetType: "MainNet"
+        NetType: "PrvNet"
 
         MinFee: 10000
         FeePerKB: 10000
