libspvsdk -> v0.4.0-104-g2fb199ee
Former-commit-id: 7e7155b4c7cb3457fbc1c67afc4a6222369cded8

--- a/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
+++ b/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
@@ -251,7 +251,7 @@ Chains:
         Index: 1
 
         /* Can be any of the following values: MainNet, TestNet, RegTest */
-        NetType: "PrvNet"
+        NetType: "MainNet"
 
         MinFee: 10000
         FeePerKB: 10000
