--- a/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
+++ b/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
@@ -234,7 +234,7 @@ Chains:
         Index: 1
 
         /* Can be any of the following values: MainNet, TestNet, RegTest */
-        NetType: "PrvNet"
+        NetType: "MainNet"
 
         MinFee: 10000
         FeePerKB: 10000
