The wallet process
Former-commit-id: 852d86e4b89756765513651140d0e31f7ad1d7ef

--- a/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
+++ b/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
@@ -4,7 +4,7 @@ Chains:
         ID: "ELA"
         Index: 0
         /* Can be any of the following values: MainNet, TestNet, RegTest,PrvNet */
-        NetType: "MainNet"
+        NetType: "RegTest"
         MinFee: 10000
         FeePerKB: 10000
         DisconnectionTime: 300
