--- a/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
+++ b/UnionSquare.iOS/elastos wallet/spvsdk/Data/Config.cfg
@@ -98,7 +98,7 @@ Chains:
             TestNet:
             {
                 StandardPort: 21338
-                MagicNumber: 2018101
+                MagicNumber: 2018111
                 Services: 0
                 TargetTimeSpan: 86400
                 TargetTimePerBlock: 120
@@ -250,7 +250,7 @@ Chains:
         Index: 1
 
         /* Can be any of the following values: MainNet, TestNet, RegTest, PrvNet */
-        NetType: "MainNet"
+        NetType: "TestNet"
 
         MinFee: 10000
         FeePerKB: 10000
