--- a/.gitmodules
+++ b/.gitmodules
@@ -5,52 +5,52 @@
 [submodule "Launcher"]
 	path = Trinity/Launcher
 	url = ../Elastos.Trinity.DApps.Launcher.git
-	branch = dev
+	branch = master
 [submodule "Dapps/Ionic/Wallet"]
 	path = Trinity/Dapps/Ionic/Wallet
 	url = ../Elastos.Trinity.Dapps.Wallet.git
-	branch = dev
+	branch = master
 [submodule "Plugins/Carrier"]
 	path = Trinity/Plugins/Carrier
 	url = ../Elastos.Trinity.Plugins.Carrier.git
-	branch = dev
+	branch = master
 [submodule "Plugins/File"]
 	path = Trinity/Plugins/File
 	url = ../Elastos.Trinity.Plugins.File.git
-	branch = dev
+	branch = trinity
 [submodule "Plugins/Hive"]
 	path = Trinity/Plugins/Hive
 	url = ../Elastos.Trinity.Plugins.Hive.git
-	branch = dev
+	branch = master
 [submodule "Plugins/IonicWebView"]
 	path = Trinity/Plugins/IonicWebView
 	url = ../Elastos.Trinity.Plugins.IonicWebView.git
-	branch = dev
+	branch = trinity
 [submodule "Plugins/Media"]
 	path = Trinity/Plugins/Media
 	url = ../Elastos.Trinity.Plugins.Media.git
-	branch = dev
+	branch = trinity
 [submodule "Plugins/QRScanner"]
 	path = Trinity/Plugins/QRScanner
 	url = ../Elastos.Trinity.Plugins.QRScanner.git
-	branch = dev
+	branch = trinity
 [submodule "Plugins/Wallet"]
 	path = Trinity/Plugins/Wallet
 	url = ../Elastos.Trinity.Plugins.Wallet.git
-	branch = dev
+	branch = master
 [submodule "Runtime"]
 	path = Trinity/Runtime
 	url = ../Elastos.Trinity.Runtime.git
-	branch = feat_nativePlugins
+	branch = master
 [submodule "Plugins/AppManager"]
 	path = Trinity/Plugins/AppManager
 	url = ../Elastos.Trinity.Runtime.Plugins.AppManager.git
-	branch = dev
+	branch = master
 [submodule "Plugins/AppService"]
 	path = Trinity/Plugins/AppService
 	url = ../Elastos.Trinity.Runtime.Plugins.AppService.git
-	branch = dev
+	branch = master
 [submodule "ToolChains"]
 	path = Trinity/ToolChains
 	url = ../Elastos.Trinity.ToolChains.git
-	branch = dev
+	branch = master
