--- a/.gitmodules
+++ b/.gitmodules
@@ -6,13 +6,16 @@
 	path = Trinity/Launcher
 	url = ../Elastos.Trinity.DApps.Launcher.git
 	branch = master
+[submodule "Dapps/Ionic/CarrierDemo"]
+	path = Trinity/Dapps/Ionic/CarrierDemo
+	url = ../Elastos.Trinity.DApps.Demo.Carrier.git
+[submodule "Dapps/Ionic/Installer"]
+	path = Trinity/Dapps/Ionic/Installer
+	url = ../Elastos.Trinity.DApps.Installer.git
 [submodule "Dapps/Ionic/Wallet"]
 	path = Trinity/Dapps/Ionic/Wallet
 	url = ../Elastos.Trinity.Dapps.Wallet.git
 	branch = master
-[submodule "Dapps/Ionic/CarrierDemo"]
-	path = Trinity/Dapps/Ionic/CarrierDemo
-	url = ../Elastos.Trinity.DApps.Demo.Carrier.git
 [submodule "Plugins/Carrier"]
 	path = Trinity/Plugins/Carrier
 	url = ../Elastos.Trinity.Plugins.Carrier.git
