--- a/UnionSquare.iOS/elastos wallet/elastos wallet-Info.plist
+++ b/UnionSquare.iOS/elastos wallet/elastos wallet-Info.plist
@@ -20,7 +20,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
-	<string>ELA Wallet</string>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
