--- a/.gitmodules
+++ b/.gitmodules
@@ -11,6 +11,9 @@
 [submodule "Dapps/Ionic/DAppsStore"]
 	path = Trinity/Dapps/Ionic/DAppsStore
 	url = ../Elastos.Trinity.DApps.DAppsStore.git
+[submodule "Dapps/Ionic/DID"]
+	path = Trinity/Dapps/Ionic/DID
+	url = ../Elastos.Trinity.DApps.DID.git
 [submodule "Dapps/Ionic/DPoSVoting"]
 	path = Trinity/Dapps/Ionic/DPoSVoting
 	url = ../Elastos.Trinity.DApps.DPoSVoting.git
