DApp: fix error for CarrierDemo & DAppStore

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,8 +8,8 @@
 [submodule "Dapps/Ionic/CarrierDemo"]
 	path = Trinity/Dapps/Ionic/CarrierDemo
 	url = ../Elastos.Trinity.DApps.Demo.Carrier.git
-[submodule "Dapps/Ionic/DAppsStore"]
-	path = Trinity/Dapps/Ionic/DAppsStore
+[submodule "Dapps/Ionic/DAppStore"]
+	path = Trinity/Dapps/Ionic/DAppStore
 	url = ../Elastos.Trinity.DApps.DAppsStore.git
 [submodule "Dapps/Ionic/DID"]
 	path = Trinity/Dapps/Ionic/DID
