--- a/UnionSquare.iOS/elastos wallet/elastos wallet-Info.plist
+++ b/UnionSquare.iOS/elastos wallet/elastos wallet-Info.plist
@@ -76,7 +76,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>16</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>LSSupports Opening DocumentsIn Place</key>
